<resources>
    <string name="app_name">Show Record Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="enter_name">Enter name</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="what_is_your_age">What is your age?</string>
    <string name="e_g_chandigarh">e.g. Chandigarh</string>
    <string name="done">Done</string>
    <string name="city">City:</string>
</resources>